--- a/list/src/App.css
+++ b/list/src/App.css
@@ -1,38 +1,48 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 .App {
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.parent {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 10px;
+  background-color: #f0f0f0;
+  padding: 10px;
+  width: 40em;
+  box-shadow: rgb(204, 205, 207) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 70vh;
+  margin: auto;
 }
 
-.App-link {
-  color: #61dafb;
+.parent .itemField {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1px;
 }
+.parent button {
+  box-shadow: rgba(0, 0, 0, 0.452) 2.4px 2.4px 3.2px;
+  border: none;
+  background-color: transparent;
+  padding: 3px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 12px;
+  font-weight: bold;
+  cursor: pointer;
+  align-self: flex-start;
+  position: relative;
+  left: 5%;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
