--- a/list/src/components/Header/header.css
+++ b/list/src/components/Header/header.css
@@ -10,19 +10,22 @@
     flex-direction: column;
     gap: 3px;
 }
-.headerContainer h1{
+
+.headerContainer h1 {
     text-align: center;
     margin-bottom: 10px;
 }
+
+.headerContainer>p {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 10px;
+    font-weight: bold;
+}
+
 .headerContainer>div {
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-.headerContainer>div > p{
-font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-font-size: 10px;
-font-weight: bold;
 }
 
 .headerContainer input {
@@ -31,4 +34,15 @@ font-weight: bold;
     padding: 5px;
     background-color: white;
     width: 40%;
+}
+
+@media (max-width:580px) {
+    .headerContainer>div {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 3px;
+    }
+    .headerContainer input {
+        width: 100%;
+    }
 }
